--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -55,10 +55,10 @@
         <Button Grid.Row="3" Grid.Column="5" Content="&#x21E6;" Command="{Binding DeleteNumberCommand}"/>
         <Button Grid.Row="11" Grid.Column="5" Content="." Command="{Binding AddNumberCommand}" CommandParameter="."/>
 
-        <Button Grid.Row="3" Grid.Column="7" Content="/" Command="{Binding AddNumberCommand}" CommandParameter="/"/>
-        <Button Grid.Row="5" Grid.Column="7" Content="*" Command="{Binding AddNumberCommand}" CommandParameter="*"/>
-        <Button Grid.Row="7" Grid.Column="7" Content="-" Command="{Binding AddNumberCommand}" CommandParameter="-"/>
-        <Button Grid.Row="9" Grid.Column="7" Content="+" Command="{Binding AddNumberCommand}" CommandParameter="+"/>
+        <Button Grid.Row="3" Grid.Column="7" Content="/" Command="{Binding AddOperationSignCommand}" CommandParameter="/"/>
+        <Button Grid.Row="5" Grid.Column="7" Content="*" Command="{Binding AddOperationSignCommand}" CommandParameter="*"/>
+        <Button Grid.Row="7" Grid.Column="7" Content="-" Command="{Binding AddOperationSignCommand}" CommandParameter="-"/>
+        <Button Grid.Row="9" Grid.Column="7" Content="+" Command="{Binding AddOperationSignCommand}" CommandParameter="+"/>
         <Button Grid.Row="11" Grid.Column="7" Content="=" Command="{Binding CalculateCommand}"/>
     </Grid>
 </Window>
