--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -50,8 +50,8 @@
         <Button Grid.Row="5" Grid.Column="3" Content="8" Command="{Binding AddNumberCommand}" CommandParameter="8"/>
         <Button Grid.Row="5" Grid.Column="5" Content="9" Command="{Binding AddNumberCommand}" CommandParameter="9"/>
 
-        <Button Grid.Row="3" Grid.Column="1" Content="CE"/>
-        <Button Grid.Row="3" Grid.Column="3" Content="C" Command="{Binding ClearCommand}"/>
+        <Button Grid.Row="3" Grid.Column="1" Content="CE" Command="{Binding ClearEntryCommand}"/>
+        <Button Grid.Row="3" Grid.Column="3" Content="C" Command="{Binding ClearAllCommand}"/>
         <Button Grid.Row="3" Grid.Column="5" Content="&#x21E6;" Command="{Binding DeleteNumberCommand}"/>
         <Button Grid.Row="11" Grid.Column="5" Content="." Command="{Binding AddNumberCommand}" CommandParameter="."/>
 
